made achev SLIGHTLY more forgiving

--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -963,7 +963,7 @@ cyoAdventure = function (a) {
         campaignTrail_temp.questions_json[25] = tunnel(130503);
     }
     //heart attack
-    if(e.noCounter == 28 && e.vpIndex == 5 && e.player_answers.includes(12829) && nn2.filter((x) => x.evvs && x.pk == 12354)[0].evvs >= 320){
+    if(e.noCounter == 28 && e.vpIndex == 5 && e.player_answers.includes(12829) && nn2.filter((x) => x.evvs && x.pk == 12240)[0].evvs <= 220){
         const cheneyDies = new Playlist();
         const cheneyDiesSong = new Song(
           "An Empty Bliss Beyond This World",
