--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -23904,7 +23904,7 @@ ending_image_dict = {
     "powellsucks": "https://i.ibb.co/RBWNxcC/image.png",
     "irancchud": "https://i.ibb.co/6DCXPFV/image.png",
     "100evsz": "https://i.ibb.co/Cb0Bp5d/image-2.jpg",
-    "jeblose": "https://i.ibb.co/tw0jYdR/image.png",
+    "jebloseimg": "https://i.ibb.co/tw0jYdR/image.png",
     "fivethirtyeightimg": "https://i.ibb.co/349qgsQ/image.png",
 //slide 2s
     "euronewsimg": "https://m.media-amazon.com/images/I/61AoX6PgjGL.png",
@@ -23920,7 +23920,7 @@ endingPicker = (out, totv, aa, quickstats) => {
     e.executable = []
     orderID = [aa[0].candidate, aa[1].candidate, aa[2].candidate];
     if(quickstats[0] > 269 && e.vpIndex == 666){
-        add_slide(ending_image_dict["jebwinimg"],slide_dict["jeb"], true, false);
+        add_slide(ending_image_dict["jebloseimg"],slide_dict["jeb"], true, false);
         ctsAchievement("Midnight, The Stars And You");
         const Jeb = new Playlist();
         const JebSong = new Song(
