--- a/tct/static/mods/1948IW_init.html
+++ b/tct/static/mods/1948IW_init.html
@@ -454,7 +454,7 @@ newMusicPlayer()
 
 
 bannerArr=0
-bannerlist=["https://media.discordapp.net/attachments/1046183324898578473/1064355035884032121/wemnCat.png", "https://media.discordapp.net/attachments/1045004271776694302/1073825031043428483/IMG_1097.jpg?width=1020&height=309"]
+bannerlist=["https://files.catbox.moe/ui3aqq.png", "https://files.catbox.moe/z2oo21.png", "https://files.catbox.moe/vn1pnk.jpg"]
 var changeBanner = () =>
 {
 bannerArr+=1
