--- a/tct/static/mods/1948IW_init.html
+++ b/tct/static/mods/1948IW_init.html
@@ -64,7 +64,7 @@ footer = $(".footer")[0]
 
 var button = document.createElement("button") // <button onclick="changeBanner()" style="font-weight: bold; height:19.49px; position: static; right: 770px; top: 0px;">Change banner</button>
 
-button.style = font-weight: bold; height:19.49px; position: static; right: 770px; top: 0px;
+button.style = "font-weight: bold; height:19.49px; position: static; right: 770px; top: 0px;"
 
 button.innerHTML = "Change banner"
 
