--- a/tct/static/mods/2008Vice_init.html
+++ b/tct/static/mods/2008Vice_init.html
@@ -1239,6 +1239,11 @@ campaignTrail_temp.achievements = {
     "description" : "Command through the Divine.",
     "cannotBeCheated" : true
 },
+  "Finality" : {
+    "image" : "https://i.imgur.com/jMRElkC.png",
+    "description" : "Win against the hardest opponent on 𝕮𝖗𝖚𝖊𝖑𝖙𝖞. God help you.",
+    "cannotBeCheated" : true
+},
   "𝖆𝖑𝖑𝖊𝖌𝖗𝖔!" : {
       "image" : "https://i.ibb.co/58WKc8Y/allegro.png",
       "description" : "Achieve perfection.",
