--- a/tct/static/mods/2008Vice_init.html
+++ b/tct/static/mods/2008Vice_init.html
@@ -1239,7 +1239,7 @@ campaignTrail_temp.achievements = {
     "description" : "Command through the Divine.",
     "cannotBeCheated" : true
 },
-  "Finality" : {
+  "Deez Ruins You See" : {
     "image" : "https://i.imgur.com/jMRElkC.png",
     "description" : "Win against the hardest opponent on 𝕮𝖗𝖚𝖊𝖑𝖙𝖞. God help you.",
     "cannotBeCheated" : true
