Update 2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html

--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -24086,6 +24086,19 @@ endingPicker = (out, totv, aa, quickstats) => {
         powellsux.addSong(powellsuxSong);
         changePlaylist(powellsux);
 	}
+	else if (quickstats[0] > 269 && opponentIndex == 3 && campaignTrail_temp.difficulty_level_multiplier < 0.85) {
+        ctsAchievement("Deez Ruins You See");
+		add_slide(ending_image_dict["husseinfail"],slide_dict["obungafail"], true, false);
+        const OsamaHusseinEnd = new Playlist();
+        const OsamaHusseinEndSong = new Song(
+          "Untitled 1",
+          "Hype Williams",
+          "https://i.discogs.com/fyrlhekMu4LW1YTuplnHc3ruom4FVWdmDN3BQHN_SUc/rs:fit/g:sm/q:90/h:432/w:432/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTI1OTgy/NDItMTI5MjQzNDg5/NC5qcGVn.jpeg",
+          "https://audio.jukehost.co.uk/Wkkp5mpYzqsO0Jidmvif3DBFf52UjxSN"
+        );
+        OsamaHusseinEnd.addSong(OsamaHusseinEndSong);
+        changePlaylist(OsamaHusseinEnd);
+	}
 	else if (quickstats[0] > 269 && opponentIndex == 3) {
         ctsAchievement("Far From Jakarta");
 		add_slide(ending_image_dict["husseinfail"],slide_dict["obungafail"], true, false);
@@ -24093,7 +24106,7 @@ endingPicker = (out, totv, aa, quickstats) => {
         const OsamaHusseinEndSong = new Song(
           "Untitled 1",
           "Hype Williams",
-          "https://i.discogs.com/IDd10swKt7Q7PvonvVV3CDeJcDQuetISDKG2lNabt1s/rs:fit/g:sm/q:90/h:545/w:593/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTQwNTUy/NjAtMTM1Mzc1MzQx/My0zNDI2LmpwZWc.jpeg",
+          "https://i.discogs.com/fyrlhekMu4LW1YTuplnHc3ruom4FVWdmDN3BQHN_SUc/rs:fit/g:sm/q:90/h:432/w:432/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTI1OTgy/NDItMTI5MjQzNDg5/NC5qcGVn.jpeg",
           "https://audio.jukehost.co.uk/Wkkp5mpYzqsO0Jidmvif3DBFf52UjxSN"
         );
         OsamaHusseinEnd.addSong(OsamaHusseinEndSong);
