--- a/tct/static/mods/MODLOADERFILE.html
+++ b/tct/static/mods/MODLOADERFILE.html
@@ -3,6 +3,7 @@
 <option data-mode="" data-tags="Althist" value="1948IW">1948 Identity War (original)</option>
 <option data-mode="" data-tags="Althist" value="1968Elvis">1968Elvis</option>
 <option data-mode="" data-tags="Althist" value="1972Yockey">1972Yockey</option>
+<option data-mode="" data-tags="Althist" value="1984WestHollywood">I WILL FOLLOW HIM</option>
 <option data-mode="" data-tags="Historical" value="1992Angola">1992Angola</option>
 <option data-mode="" data-tags="Althist" value="2008Vice">𝖛𝖎𝖈𝖊.</option>
 <option data-mode="" data-tags="Althist" value="2022JAIR">2022JAIR</option>
@@ -11,4 +12,3 @@
 <option data-mode="" data-tags="Althist" value="2278Louisiana">2278Louisiana</option>
 <option data-mode="" data-tags="Althist" value="21028">21028</option>
 <option data-mode="" data-tags="Althist" value="2024AS">2024 American Spirit</option>
-<option data-mode="" data-tags="Modjam" value="modjamtest">test</option>
