--- a/tct/static/mods/MODLOADERFILE.html
+++ b/tct/static/mods/MODLOADERFILE.html
@@ -5,6 +5,7 @@
 <option data-mode="" data-tags="Althist" value="1972Yockey">1972Yockey</option>
 <option data-mode="" data-tags="Althist" value="1984WestHollywood">I WILL FOLLOW HIM</option>
 <option data-mode="" data-tags="Historical" value="1992Angola">1992Angola</option>
+<option data-mode="" data-tags="Althist" value="2000T">2000T</option>
 <option data-mode="" data-tags="Althist" value="2008Vice">𝖛𝖎𝖈𝖊.</option>
 <option data-mode="" data-tags="Althist" value="2022JAIR">2022JAIR</option>
 <option data-mode="" data-tags="Althist" value="2032SwanSong">2032 Swan Song</option>
