--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="description" content="OpenTCT is a free-speech oriented fork of Dan Bryan's The Campaign Trail website." />
+	<meta name="description" content="WokeTCT is a anti-poopjar oriented fork of Dan Bryan's The Campaign Trail website." />
 
-	<title>OpenTCT</title>
+	<title>Woke TCT</title>
 
 </head>
 
