--- a/tct/games/viewGame.html
+++ b/tct/games/viewGame.html
@@ -3,20 +3,20 @@
 <!-- Mirrored from www.americanhistoryusa.com/campaign-trail/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 16 Apr 2021 08:05:58 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
-<title>OpenTCT</title>
+<title>Woke TCT</title>
 <link rel="stylesheet" href="../static/amusa_main_2016032801.css" type="text/css" media="screen" />
 <link rel="shortcut icon" href="../static/34starcircle-2.png" />
 <link rel="canonical" href="index.html" />
-<meta name="description" content="OpenTCT game results." />
-<meta property="og:title" content="OpenTCT" />
+<meta name="description" content="Woke TCT game results." />
+<meta property="og:title" content="Woke TCT" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="../static/34starcircle-2.png" />
 <meta property="og:image:type" content="image/jpeg" /> 
 <meta property="og:image:width" content="200" />
 <meta property="og:image:height" content="200" />
 <meta property="og:url" content="index.html" />
-<meta property="og:description" content="OpenTCT game results." />
-<meta property="og:site_name" content="OpenTCT" />
+<meta property="og:description" content="Woke TCT game results." />
+<meta property="og:site_name" content="Woke TCT" />
 </head>
 <body class="base">
 <div class="container">      
@@ -27,7 +27,7 @@
 <div class="content_single">
 <div id="game_window">
 <div class="game_header">
-<h2>OpenTCT</h2>
+<h2>Woke TCT</h2>
 </div>
 <div class="below_header" id="below_header">
 
