--- a/tct/static/mods/MODLOADERFILE.html
+++ b/tct/static/mods/MODLOADERFILE.html
@@ -1,5 +1,6 @@
 <option data-mode="" data-tags="" value="other">Other</option>
 <option data-mode="" data-tags="Funny" value="0000Random_Mod">Random Scenario</option>
+<option data-mode="" data-tags="Althist" value="2012 - Razistorija">Razistorija</option>
 <option data-mode="" data-tags="Althist" value="1948IW">1948 Identity War (original)</option>
 <option data-mode="" data-tags="Althist" value="1968Elvis">1968Elvis</option>
 <option data-mode="" data-tags="Althist" value="1972Yockey">1972Yockey</option>
@@ -9,5 +10,4 @@
 <option data-mode="" data-tags="Althist" value="2008Vice">𝖛𝖎𝖈𝖊.</option>
 <option data-mode="" data-tags="Althist" value="2022JAIR">2022JAIR</option>
 <option data-mode="" data-tags="Althist" value="2032SwanSong">2032 Swan Song</option>
-<option data-mode="" data-tags="Althist" value="2044CoD">2044: Children of Dusk</option>
 <option data-mode="" data-tags="Althist" value="2278Louisiana">2278Louisiana</option>
