--- a/tct/campaign-trail/index.html
+++ b/tct/campaign-trail/index.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <head>
-    <title>OpenTCT</title>
+    <title>Woke TCT</title>
     <link rel="stylesheet" href="../static/amusa_main_2016032801.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="../static/css/community.css" type="text/css" media="screen" />
     <link rel="icon" type="image/x-icon" href="../static/opentctfavico.gif">
     <link rel="shortcut icon" href="/static/34starcircle-2.png" type="image/png" />
     <link rel="canonical" href="index.html" />
     <meta name="description" content="Can you win a Presidential election? Step into the shoes of a battery of candidates across real and alternate timelines and find out." />
-    <meta property="og:title" content="OpenTCT" />
+    <meta property="og:title" content="Woke TCT" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="../static/34starcircle-2.png" />
     <meta property="og:image:type" content="image/png" />
@@ -17,7 +17,7 @@
     <meta property="og:image:height" content="200" />
     <meta property="og:url" content="index.html" />
     <meta property="og:description" content="Can you win a Presidential election? Step into the shoes of a battery of candidates across real and alternate timelines and find out." />
-    <meta property="og:site_name" content="OpenTCT" />
+    <meta property="og:site_name" content="Woke TCT" />
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
@@ -45,7 +45,7 @@
         <div class="content_single">
           <div id="game_window">
             <div class="game_header">
-              <h2>OpenTCT</h2>
+              <h2>Woke TCT</h2>
             </div>
             <div class="below_header" id="below_header">
               <div class="inner_window_front" id="inner_window_1">
@@ -55,7 +55,6 @@
                   <li>You will answer questions about your platform and positions, and also about your campaign strategy.</li>
                   <li>The answers will affect your popularity for better or worse, both nationally and in individual states.</li>
                   <li>Walk the fine line between appealing to your base and winning a majority of the votes.</li>
-                  <li>All mods are created by the community of OpenTCT, or are archived here from years past (with permission from the author, when possible).</li>
                   <li>To load a mod, scroll down below to view the mod selection, select a mod, click the play button, and then press "Click Here to Begin!".</li>
                   <li>Alternatively, click the 'Custom Mod Loader' button to load a mod by copying and pasting the codes, or even save them!</li>
                 </ul>
